<resources>
    <string name="app_name">FLO</string>
    <string name="home_text1">포근하게 덮어주는 꿈의 목소리</string>
    <string name="home_text2">총 15곡 2019.11.11</string>
    <string name="home_text3">잠이 안온다 젠(zen)</string>
    <string name="home_text4">오늘 발매 음악</string>
    <string name="home_text5">종합</string>
    <string name="home_text6">국내</string>
    <string name="home_text7">해외</string>
    <string name="home_text8">LILAC</string>
    <string name="home_text9">아이유(IU)</string>
    <string name="home_text10">제목</string>
    <string name="home_text11">가수</string>
</resources>