<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/home_img"
        android:layout_width="480dp"
        android:layout_height="480dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/img_first_album_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/album_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="250dp"
        android:src="@drawable/img_album_exp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.58" />


    <ImageView
        android:id="@+id/album_img2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="280dp"
        android:src="@drawable/img_album_exp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/home_img"
        app:layout_constraintTop_toTopOf="@+id/home_img"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="260dp"
        android:text="@string/home_text1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_img"
        app:layout_constraintTop_toTopOf="@+id/home_img" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="250dp"
        android:text="@string/home_text2"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_img"
        app:layout_constraintTop_toTopOf="@+id/home_img" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="190dp"
        android:text="@string/home_text3"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/album_img"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:text="@string/home_text3"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="130dp"
        android:text="@string/home_text4"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_img" />

    <ImageView
        android:id="@+id/arrow_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="220dp"
        android:src="@drawable/btn_main_arrow_more"
        app:layout_constraintBottom_toBottomOf="@+id/text5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toTopOf="@+id/text5" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:layout_marginStart="50dp"
        android:text="@string/home_text5"
        android:textColor="#B7AEF2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_img"
        app:layout_constraintStart_toEndOf="@+id/arrow_img"
        app:layout_constraintTop_toTopOf="@+id/arrow_img" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:text="@string/home_text6"
        android:textColor="#BFBFBF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text6"
        app:layout_constraintStart_toEndOf="@+id/text6"
        app:layout_constraintTop_toTopOf="@+id/text6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:text="@string/home_text7"
        android:textColor="#BFBFBF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text7"
        app:layout_constraintStart_toEndOf="@+id/text7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/IU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_img">

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:src="@drawable/iu_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/IU2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_img">

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/iu_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>